resolving openai error

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 pandas
-llama_index.core
-llama_index.embeddings.huggingface
-llama_index.llms.ollama
+llama_index.llms.openai
 llama_index.core
 openpyxl
 streamlit
